--- a/index.html
+++ b/index.html
@@ -1,61 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Hey You 👀</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Hey 👀</title>
+
 <style>
-    body {
-        background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-        height: 100vh;
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-family: Arial, sans-serif;
-    }
+:root{
+  --bg1:#0f2027;
+  --bg2:#203a43;
+  --bg3:#2c5364;
+  --neon:#7df9ff;
+  --soft:#cfd9df;
+}
 
-    .card {
-        background: white;
-        padding: 30px;
-        border-radius: 15px;
-        text-align: center;
-        box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-        animation: pop 1s ease;
-    }
+*{
+  box-sizing:border-box;
+  font-family: 'Segoe UI', system-ui, sans-serif;
+}
 
-    h1 {
-        color: #ff4d6d;
-    }
+body{
+  margin:0;
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background: linear-gradient(135deg,var(--bg1),var(--bg2),var(--bg3));
+  overflow:hidden;
+  color:white;
+}
 
-    button {
-        margin-top: 15px;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 20px;
-        background: #ff4d6d;
-        color: white;
-        font-size: 16px;
-        cursor: pointer;
-    }
+/* floating glow background */
+.glow{
+  position:absolute;
+  width:300px;
+  height:300px;
+  background: radial-gradient(circle, var(--neon), transparent 60%);
+  filter: blur(80px);
+  opacity:0.35;
+  animation: float 10s infinite alternate ease-in-out;
+}
+.glow.one{ top:10%; left:10%; }
+.glow.two{ bottom:10%; right:10%; animation-delay:3s; }
 
-    button:hover {
-        background: #e63950;
-    }
+@keyframes float{
+  from{ transform: translateY(0px); }
+  to{ transform: translateY(-60px); }
+}
 
-    @keyframes pop {
-        from { transform: scale(0.8); opacity: 0; }
-        to { transform: scale(1); opacity: 1; }
-    }
+.card{
+  position:relative;
+  z-index:2;
+  width:90%;
+  max-width:360px;
+  padding:28px;
+  border-radius:20px;
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(14px);
+  box-shadow: 0 0 30px rgba(0,0,0,0.4);
+  text-align:center;
+  animation: pop 1s ease;
+}
+
+@keyframes pop{
+  from{ transform: scale(0.9); opacity:0; }
+  to{ transform: scale(1); opacity:1; }
+}
+
+h1{
+  margin:0 0 10px;
+  font-size:26px;
+  letter-spacing:1px;
+}
+
+p{
+  color:var(--soft);
+  font-size:15px;
+  line-height:1.5;
+}
+
+button{
+  margin-top:18px;
+  padding:12px 22px;
+  border:none;
+  border-radius:25px;
+  background: var(--neon);
+  color:#003;
+  font-weight:600;
+  cursor:pointer;
+  box-shadow: 0 0 15px rgba(125,249,255,0.7);
+  transition: transform .2s, box-shadow .2s;
+}
+
+button:hover{
+  transform: translateY(-2px);
+  box-shadow: 0 0 25px rgba(125,249,255,1);
+}
+
+.hidden{
+  display:none;
+}
 </style>
 </head>
+
 <body>
 
+<div class="glow one"></div>
+<div class="glow two"></div>
+
 <div class="card">
-    <h1>Hey 👋</h1>
-    <p>I just wanted to say…</p>
-    <p><strong>You make my day better 😊</strong></p>
-    <button onclick="alert('Thanks for reading ❤️')">Click me</button>
+  <h1>Hey 🙂</h1>
+  <p id="text">
+    I was just experimenting with code…
+  </p>
+
+  <button onclick="reveal()">Tap here</button>
 </div>
+
+<script>
+function reveal(){
+  document.getElementById("text").innerHTML =
+    "And somehow this page ended up being for you ✨";
+}
+</script>
 
 </body>
 </html>
