--- a/index.html
+++ b/index.html
@@ -1,128 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Hey 👀</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>For My Crush 💖</title>
+  <style>
+    /* Basic Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-<style>
-:root{
-  --bg1:#0f2027;
-  --bg2:#203a43;
-  --bg3:#2c5364;
-  --neon:#7df9ff;
-  --soft:#cfd9df;
-}
+    body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(120deg, #ff9a9e, #fad0c4);
+      overflow: hidden;
+      animation: gradientMove 10s infinite alternate;
+    }
 
-*{
-  box-sizing:border-box;
-  font-family: 'Segoe UI', system-ui, sans-serif;
-}
+    @keyframes gradientMove {
+      0% {background-position: 0% 50%;}
+      100% {background-position: 100% 50%;}
+    }
 
-body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background: linear-gradient(135deg,var(--bg1),var(--bg2),var(--bg3));
-  overflow:hidden;
-  color:white;
-}
+    .container {
+      text-align: center;
+      background: rgba(255, 255, 255, 0.2);
+      padding: 50px 30px;
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      animation: pop 1s ease-out forwards;
+    }
 
-/* floating glow background */
-.glow{
-  position:absolute;
-  width:300px;
-  height:300px;
-  background: radial-gradient(circle, var(--neon), transparent 60%);
-  filter: blur(80px);
-  opacity:0.35;
-  animation: float 10s infinite alternate ease-in-out;
-}
-.glow.one{ top:10%; left:10%; }
-.glow.two{ bottom:10%; right:10%; animation-delay:3s; }
+    @keyframes pop {
+      0% {transform: scale(0);}
+      100% {transform: scale(1);}
+    }
 
-@keyframes float{
-  from{ transform: translateY(0px); }
-  to{ transform: translateY(-60px); }
-}
+    h1 {
+      font-size: 2.5rem;
+      color: #fff;
+      margin-bottom: 20px;
+      animation: floatText 3s infinite alternate;
+    }
 
-.card{
-  position:relative;
-  z-index:2;
-  width:90%;
-  max-width:360px;
-  padding:28px;
-  border-radius:20px;
-  background: rgba(255,255,255,0.08);
-  backdrop-filter: blur(14px);
-  box-shadow: 0 0 30px rgba(0,0,0,0.4);
-  text-align:center;
-  animation: pop 1s ease;
-}
+    @keyframes floatText {
+      0% {transform: translateY(0);}
+      100% {transform: translateY(-10px);}
+    }
 
-@keyframes pop{
-  from{ transform: scale(0.9); opacity:0; }
-  to{ transform: scale(1); opacity:1; }
-}
+    p {
+      font-size: 1.2rem;
+      color: #fff;
+      margin-bottom: 30px;
+    }
 
-h1{
-  margin:0 0 10px;
-  font-size:26px;
-  letter-spacing:1px;
-}
+    .heart {
+      font-size: 3rem;
+      color: #ff4b5c;
+      animation: beat 1s infinite;
+    }
 
-p{
-  color:var(--soft);
-  font-size:15px;
-  line-height:1.5;
-}
+    @keyframes beat {
+      0%, 100% {transform: scale(1);}
+      50% {transform: scale(1.3);}
+    }
 
-button{
-  margin-top:18px;
-  padding:12px 22px;
-  border:none;
-  border-radius:25px;
-  background: var(--neon);
-  color:#003;
-  font-weight:600;
-  cursor:pointer;
-  box-shadow: 0 0 15px rgba(125,249,255,0.7);
-  transition: transform .2s, box-shadow .2s;
-}
+    button {
+      padding: 12px 25px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 50px;
+      background: #ff4b5c;
+      color: white;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.3s;
+    }
 
-button:hover{
-  transform: translateY(-2px);
-  box-shadow: 0 0 25px rgba(125,249,255,1);
-}
+    button:hover {
+      transform: scale(1.1);
+      background: #ff758f;
+    }
 
-.hidden{
-  display:none;
-}
-</style>
+    /* Confetti */
+    .confetti {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: #fff;
+      top: -10px;
+      animation: fall 5s linear infinite;
+      opacity: 0.8;
+    }
+
+    @keyframes fall {
+      0% {transform: translateY(0) rotate(0deg);}
+      100% {transform: translateY(100vh) rotate(360deg);}
+    }
+
+  </style>
 </head>
-
 <body>
+  <div class="container">
+    <h1>Hey Crush! 💖</h1>
+    <p>You’re amazing and I just wanted you to know ❤️</p>
+    <div class="heart">💓</div>
+    <br>
+    <button onclick="alert('You just made my day! 😊')">Click Me</button>
+  </div>
 
-<div class="glow one"></div>
-<div class="glow two"></div>
-
-<div class="card">
-  <h1>Hey 🙂</h1>
-  <p id="text">
-    I was just experimenting with code…
-  </p>
-
-  <button onclick="reveal()">Tap here</button>
-</div>
-
-<script>
-function reveal(){
-  document.getElementById("text").innerHTML =
-    "And somehow this page ended up being for you ✨";
-}
-</script>
-
+  <script>
+    // Generate confetti
+    for(let i=0; i<50; i++){
+      let confetti = document.createElement('div');
+      confetti.classList.add('confetti');
+      confetti.style.left = Math.random() * window.innerWidth + 'px';
+      confetti.style.background = `hsl(${Math.random()*360}, 70%, 70%)`;
+      confetti.style.animationDelay = Math.random()*5 + 's';
+      confetti.style.width = confetti.style.height = Math.random()*8 + 5 + 'px';
+      document.body.appendChild(confetti);
+    }
+  </script>
 </body>
 </html>
