--- a/index.html
+++ b/index.html
@@ -3,129 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>For My Crush 💖</title>
+  <title>Special for You 💖</title>
   <style>
-    /* Basic Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+    /* Reset */
+    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', sans-serif; }
 
     body {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(120deg, #ff9a9e, #fad0c4);
-      overflow: hidden;
-      animation: gradientMove 10s infinite alternate;
+      height:100vh;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      overflow:hidden;
+      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
     }
 
-    @keyframes gradientMove {
-      0% {background-position: 0% 50%;}
-      100% {background-position: 100% 50%;}
+    @keyframes gradientBG {
+      0% {background-position:0% 50%;}
+      50% {background-position:100% 50%;}
+      100% {background-position:0% 50%;}
     }
 
     .container {
+      position: relative;
       text-align: center;
-      background: rgba(255, 255, 255, 0.2);
-      padding: 50px 30px;
-      border-radius: 20px;
+      padding:50px 30px;
+      background: rgba(255,255,255,0.2);
+      border-radius:25px;
       backdrop-filter: blur(10px);
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      animation: pop 1s ease-out forwards;
+      box-shadow:0 0 30px rgba(0,0,0,0.3);
+      animation: fadeIn 1.5s ease forwards;
     }
 
-    @keyframes pop {
-      0% {transform: scale(0);}
-      100% {transform: scale(1);}
-    }
+    @keyframes fadeIn { from {opacity:0; transform:scale(0.5);} to {opacity:1; transform:scale(1);} }
 
     h1 {
-      font-size: 2.5rem;
-      color: #fff;
-      margin-bottom: 20px;
-      animation: floatText 3s infinite alternate;
+      font-size:3rem;
+      color:#fff;
+      text-shadow: 0 0 10px #fff, 0 0 20px #ff4b5c, 0 0 30px #ff4b5c;
+      animation: glow 2s infinite alternate;
     }
 
-    @keyframes floatText {
-      0% {transform: translateY(0);}
-      100% {transform: translateY(-10px);}
-    }
-
-    p {
-      font-size: 1.2rem;
-      color: #fff;
-      margin-bottom: 30px;
-    }
-
-    .heart {
-      font-size: 3rem;
-      color: #ff4b5c;
-      animation: beat 1s infinite;
-    }
-
-    @keyframes beat {
-      0%, 100% {transform: scale(1);}
-      50% {transform: scale(1.3);}
-    }
-
-    button {
-      padding: 12px 25px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 50px;
-      background: #ff4b5c;
-      color: white;
-      cursor: pointer;
-      transition: transform 0.2s, background 0.3s;
-    }
-
-    button:hover {
-      transform: scale(1.1);
-      background: #ff758f;
-    }
-
-    /* Confetti */
-    .confetti {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background: #fff;
-      top: -10px;
-      animation: fall 5s linear infinite;
-      opacity: 0.8;
-    }
-
-    @keyframes fall {
-      0% {transform: translateY(0) rotate(0deg);}
-      100% {transform: translateY(100vh) rotate(360deg);}
-    }
-
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Hey Crush! 💖</h1>
-    <p>You’re amazing and I just wanted you to know ❤️</p>
-    <div class="heart">💓</div>
-    <br>
-    <button onclick="alert('You just made my day! 😊')">Click Me</button>
-  </div>
-
-  <script>
-    // Generate confetti
-    for(let i=0; i<50; i++){
-      let confetti = document.createElement('div');
-      confetti.classList.add('confetti');
-      confetti.style.left = Math.random() * window.innerWidth + 'px';
-      confetti.style.background = `hsl(${Math.random()*360}, 70%, 70%)`;
-      confetti.style.animationDelay = Math.random()*5 + 's';
-      confetti.style.width = confetti.style.height = Math.random()*8 + 5 + 'px';
-      document.body.appendChild(confetti);
-    }
-  </script>
-</body>
-</html>
+    @keyfram
