--- a/index.html
+++ b/index.html
@@ -1,48 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Special for You 💖</title>
-  <style>
-    /* Reset */
-    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', sans-serif; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Magical Crush Page 💖🎆</title>
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif;}
+body{
+  height:100vh;overflow:hidden;
+  background:linear-gradient(-45deg,#ff9a9e,#fad0c4,#fbc2eb,#a18cd1);
+  background-size:400% 400%;
+  animation:gradientBG 20s ease infinite;
+  cursor:none;
+}
+@keyframes gradientBG{0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
 
-    body {
-      height:100vh;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      overflow:hidden;
-      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
-    }
+.container{
+  text-align:center; padding:50px 30px;
+  background: rgba(255,255,255,0.2); border-radius:25px;
+  backdrop-filter: blur(10px); box-shadow:0 0 30px rgba(0,0,0,0.3);
+  position: relative; z-index:2;
+}
+h1{font-size:3rem;color:#fff;text-shadow:0 0 10px #fff,0 0 20px #ff4b5c,0 0 30px #ff4b5c;}
+.typing{font-size:1.5rem;color:#fff;margin:20px 0;min-height:2em;}
+button{
+  padding:12px 25px;font-size:1rem;border:none;border-radius:50px;
+  background:linear-gradient(45deg,#ff4b5c,#ff758f); color:white; cursor:pointer;
+  transition: transform 0.3s, box-shadow 0.3s; box-shadow:0 0 10px #ff4b5c;
+  position: relative; overflow:hidden;
+}
+button:hover{transform:scale(1.1); box-shadow:0 0 20px #ff758f,0 0 30px #ff4b5c;}
+.sparkle{position:absolute;width:5px;height:5px;background:#fff;border-radius:50%;pointer-events:none;opacity:0.8;animation:sparkleAnim 1s linear infinite;}
+@keyframes sparkleAnim{0%{transform:translate(0,0) scale(1);opacity:1;}100%{transform:translate(50px,-50px) scale(0);opacity:0;}}
+.heart{position:absolute;font-size:2rem;animation:floatHeart 10s linear infinite;}
+@keyframes floatHeart{0%{transform:translateY(0) rotate(0deg);}100%{transform:translateY(-100vh) rotate(360deg);}}
+.explodingHeart{position:absolute;font-size:20px;pointer-events:none;animation:explode 1s forwards;}
+@keyframes explode{0%{transform:scale(0) translateY(0);opacity:1;}100%{transform:scale(1.5) translateY(-150px) rotate(360deg);opacity:0;}}
+canvas{position:absolute;top:0;left:0;width:100%;height:100%;z-index:1;pointer-events:none;}
+</style>
+</head>
+<body>
 
-    @keyframes gradientBG {
-      0% {background-position:0% 50%;}
-      50% {background-position:100% 50%;}
-      100% {background-position:0% 50%;}
-    }
+<canvas id="fireworks"></canvas>
 
-    .container {
-      position: relative;
-      text-align: center;
-      padding:50px 30px;
-      background: rgba(255,255,255,0.2);
-      border-radius:25px;
-      backdrop-filter: blur(10px);
-      box-shadow:0 0 30px rgba(0,0,0,0.3);
-      animation: fadeIn 1.5s ease forwards;
-    }
+<div class="container">
+  <h1>Hey You! 💖</h1>
+  <div class="typing" id="typing"></div>
+  <button id="loveBtn">Click Me! 💓</button>
+</div>
 
-    @keyframes fadeIn { from {opacity:0; transform:scale(0.5);} to {opacity:1; transform:scale(1);} }
+<audio autoplay loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+</audio>
 
-    h1 {
-      font-size:3rem;
-      color:#fff;
-      text-shadow: 0 0 10px #fff, 0 0 20px #ff4b5c, 0 0 30px #ff4b5c;
-      animation: glow 2s infinite alternate;
-    }
+<script>
+// Typing effect
+const message="You are amazing and make every day brighter! 🌟";
+const typingEl=document.getElementById('typing');
+let index=0;
+function type(){if(index<message.length){typingEl.innerHTML+=message[index];index++;setTimeout(type,100);}}
+type();
 
-    @keyfram
+// Floating hearts background
+const colors=["#ff4b5c","#ff758f","#ffd1dc","#ff9a9e","#fbc2eb"];
+for(let i=0;i<40;i++){
+  const heart=document.createElement('div');
+  heart.style.position="absolute";
+  heart.style.left=Math.random()*100+"vw";
+  heart.style.top=Math.random()*100+"vh";
+  heart.style.fontSize=(Math.random()*25+10)+"px";
+  heart.style.color=colors[Math.floor(Math.random()*colors.length)];
+  heart.style.opacity=Math.random();
+  heart.innerText="❤️";
+  heart.style.animation=`floatHeart ${Math.random()*10+5}s linear infinite`;
+  document.body.appendChild(heart);
+}
+
+// Sparkles around button
+const btn=document.getElementById('loveBtn');
+setInterval(()=>{
+  const sparkle=document.createElement('div');
+  sparkle.classList.add('sparkle');
+  sparkle.style.left=Math.random()*btn.offsetWidth+"px";
+  sparkle.style.top=Math.random()*btn.offsetHeight+"px";
+  btn.appendChild(sparkle);
+  setTimeout(()=>sparkle.remove(),1000);
+},200);
+
+// Exploding hearts and fireworks on click
+btn.addEventListener('click',function(e){
+  for(let i=0;i<15;i++){
+    const expHeart=document.createElement('div');
+    expHeart.classList.add('explodingHeart');
+    expHeart.style.left=e.clientX+(Math.random()*50-25)+"px";
+    expHeart.style.top=e.clientY+(Math.random()*50-25)+"px";
+    expHeart.style.color=colors[Math.floor(Math.random()*colors.length)];
+    expHeart.style.fontSize=(Math.random()*20+15)+"px";
+    expHeart.innerText="💖";
+    document.body.appendChild(expHeart);
+    setTimeout(()=>expHeart.remove(),1000);
+  }
+  for(let i=0;i<20;i++){
+    const trail=document.createElement('div');
+    trail.classList.add('explodingHeart');
+    trail.style.left=e.clientX+"px";
+    trail.style.top=e.clientY+"px";
+    trail.style.color=`hsl(${Math.random()*360},70%,70%)`;
+    trail.style.fontSize=(Math.random()*20+10)+"px";
+    trail.innerText="💜";
+    document.body.appendChild(trail);
+    setTimeout(()=>trail.remove(),1500);
+  }
+  createFirework(e.clientX,e.clientY);
+  alert("You just made my day! 😊");
+});
+
+// Cursor rainbow heart trail
+document.addEventListener('mousemove',e=>{
+  const cursorHeart=document.createElement('div');
+  cursorHeart.classList.add('explodingHeart');
+  cursorHeart.style.left=e.clientX+"px";
+  cursorHeart.style.top=e.clientY+"px";
+  cursorHeart.style.color=`hsl(${Math.random()*360},70%,70%)`;
+  cursorHeart.style.fontSize=(Math.random()*15+10)+"px";
+  cursorHeart.innerText="💖";
+  document.body.appendChild(cursorHeart);
+  setTimeout(()=>cursorHeart.remove(),1000);
+});
+
+// Fireworks canvas
+const canvas=document.getElementById('fireworks');
+const ctx=canvas.getContext('2d');
+canvas.width=window.innerWidth;
+canvas.height=window.innerHeight;
+function random(min,max){return Math.random()*(max-min)+min;}
+function createFirework(x,y){
+  const particles=[];
+  for(let i=0;i<50;i++){
+    particles.push({x:x,y:y,dx:Math.cos(Math.random()*2*Math.PI)*random(2,6),dy:Math.sin(Math.random()*2*Math.PI)*random(2,6),color:`hsl(${Math.random()*360},80%,60%)`,alpha:1});
+  }
+  const interval=setInterval(()=>{
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    let alive=false;
+    particles.forEach(p=>{
+      if(p.alpha>0){
+        alive=true;
+        ctx.fillStyle=p.color;
+        ctx.globalAlpha=p.alpha;
+        ctx.beginPath();
+        ctx.arc(p.x,p.y,3,0,Math.PI*2);
+        ctx.fill();
+        p.x+=p.dx; p.y+=p.dy; p.alpha-=0.02;
+      }
+    });
+    if(!alive) clearInterval(interval);
+  },16);
+}
+window.addEventListener('resize',()=>{canvas.width=window.innerWidth; canvas.height=window.innerHeight;});
+</script>
+
+</body>
+</html>
