--- a/index.html
+++ b/index.html
@@ -3,104 +3,108 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>💖 Mega Crush Page v3</title>
+<title>💖 Mega Crush Page Animated</title>
 
 <!-- Music autoplay -->
 <audio id="bgMusic" autoplay loop>
   <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
 </audio>
 
-<!-- Internal CSS -->
 <style>
-*{margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI',sans-serif;}
-body{overflow:hidden; height:100vh; background:#111; color:white; cursor:none;}
+/* RESET */
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif;}
+body{overflow:hidden;height:100vh;background:#111;color:white;cursor:none;}
 
-/* Slider */
-.slider{display:flex; width:400vw; height:100vh; transition:transform 1s ease-in-out;}
-.slide{width:100vw; height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; padding:40px; position:relative;}
+/* SLIDER */
+.slider{display:flex;width:400vw;height:100vh;transition:transform 0.8s ease;}
+.slide{width:100vw;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:40px;position:relative;}
 
-/* Slide backgrounds */
+/* SLIDE COLORS */
 .slide1{background:linear-gradient(135deg,#ff758f,#ff4b6c);}
 .slide2{background:linear-gradient(135deg,#6a11cb,#2575fc);}
 .slide3{background:linear-gradient(135deg,#f7971e,#ffd200);}
 .slide4{background:linear-gradient(135deg,#11998e,#38ef7d);}
 
-/* Headings & text */
+/* HEADINGS & TEXT */
 h1,h2,h3{margin-bottom:10px;}
 h1{font-size:3rem;}
 h2{font-size:2.2rem;}
-p{font-size:1.2rem; max-width:600px; margin-bottom:10px;}
-span{font-size:1rem; color:white;}
-.heart{font-size:3rem; animation:beat 1.5s infinite; margin-bottom:10px;}
+p{font-size:1.2rem;max-width:600px;margin-bottom:10px;}
+span{font-size:1rem;color:white;}
+.heart{font-size:3rem;animation:beat 1.5s infinite;margin-bottom:10px;}
 @keyframes beat{0%,100%{transform:scale(1);}50%{transform:scale(1.3);}}
 
-/* Buttons */
-button{margin-top:15px; padding:12px 25px; border:none; border-radius:30px; background:#fff; color:#ff4b6c; font-weight:bold; cursor:pointer; transition:0.3s;}
-button:hover{transform:scale(1.1); background:#ff2e63; color:white;}
+/* BUTTONS */
+button{margin-top:15px;padding:12px 25px;border:none;border-radius:30px;background:#fff;color:#ff4b6c;font-weight:bold;cursor:pointer;transition:0.3s;}
+button:hover{transform:scale(1.1);background:#ff2e63;color:white;}
 
-/* Nav dots */
-.dots{position:fixed; bottom:20px; width:100%; display:flex; justify-content:center; gap:10px;}
-.dot{width:12px; height:12px; border-radius:50%; background:rgba(255,255,255,0.4); cursor:pointer;}
+/* NAV DOTS */
+.dots{position:fixed;bottom:20px;width:100%;display:flex;justify-content:center;gap:10px;z-index:100;}
+.dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.4);cursor:pointer;}
 .dot.active{background:white;}
 
-/* Floating elements */
-.floating{position:absolute; opacity:0.5; animation:float linear infinite;}
+/* FLOATING HEARTS AND SPARKLES */
+.floating{position:absolute;opacity:0.5;animation:float linear infinite;}
 @keyframes float{0%{transform:translateY(100vh);}100%{transform:translateY(-10vh);}}
 
-/* Table */
-table{border-collapse:collapse; margin:15px 0;}
-table, th, td{border:1px solid #fff; padding:8px;}
+/* SPARKLE */
+.sparkle{position:absolute;width:5px;height:5px;background:#fff;border-radius:50%;pointer-events:none;opacity:0.8;animation:sparkleAnim 1s linear infinite;}
+@keyframes sparkleAnim{0%{transform:translate(0,0) scale(1);opacity:1;}100%{transform:translate(50px,-50px) scale(0);opacity:0;}}
+
+/* EXPLODING HEARTS */
+.explodingHeart{position:absolute;font-size:20px;pointer-events:none;animation:explode 1s forwards;}
+@keyframes explode{0%{transform:scale(0) translateY(0);opacity:1;}100%{transform:scale(1.5) translateY(-150px) rotate(360deg);opacity:0;}}
+
+/* TABLE */
+table{border-collapse:collapse;margin:15px 0;}
+table, th, td{border:1px solid #fff;padding:8px;}
 th{background:rgba(255,255,255,0.2);}
 td{background:rgba(255,255,255,0.1);}
 
-/* Form */
-input, textarea{padding:8px; border-radius:5px; border:none; margin:5px;}
+/* FORM */
+input, textarea{padding:8px;border-radius:5px;border:none;margin:5px;}
 input[type="text"], input[type="email"], textarea{width:250px;}
 
-/* Decorative divs */
-.dec{width:20px; height:20px; border-radius:50%; position:absolute; opacity:0.3;}
-.dec1{background:#ff4b6c; top:50px; left:100px;}
-.dec2{background:#ffd1dc; top:200px; left:300px;}
-.dec3{background:#fbc2eb; top:400px; left:500px;}
-.dec4{background:#ff758f; top:150px; left:700px;}
-.dec5{background:#38ef7d; top:300px; left:900px;}
-
-/* Images */
-img{max-width:120px; margin:10px; border-radius:10px;}
-
-/* Links */
-a{color:white; text-decoration:none;}
-a:hover{text-decoration:underline;}
+/* DECORATIVE DIVS */
+.dec{width:20px;height:20px;border-radius:50%;position:absolute;opacity:0.3;}
+.dec1{background:#ff4b6c;top:50px;left:100px;}
+.dec2{background:#ffd1dc;top:200px;left:300px;}
+.dec3{background:#fbc2eb;top:400px;left:500px;}
+.dec4{background:#ff758f;top:150px;left:700px;}
+.dec5{background:#38ef7d;top:300px;left:900px;}
 </style>
 </head>
 <body>
 
-<!-- Slider -->
+<!-- SLIDER -->
 <div class="slider" id="slider">
 
-<!-- Slide 1 -->
+<!-- SLIDE 1 -->
 <div class="slide slide1">
   <div class="heart">💖</div>
   <h1>Hello Sweetheart!</h1>
   <h2>Welcome to Your Mega Crush Page 💌</h2>
   <p><span>I made this page for you 😍</span></p>
+
   <ul>
     <li>Fun times</li>
     <li>Smiles</li>
     <li>Laughs</li>
     <li>Heartbeats 💓</li>
   </ul>
+
   <table>
     <tr><th>Things I Like</th><th>Emoji</th></tr>
     <tr><td>Your Smile</td><td>😊</td></tr>
     <tr><td>Your Laugh</td><td>😂</td></tr>
     <tr><td>Your Eyes</td><td>😍</td></tr>
   </table>
+
   <div class="dec dec1"></div>
   <div class="dec dec2"></div>
 </div>
 
-<!-- Slide 2 -->
+<!-- SLIDE 2 -->
 <div class="slide slide2">
   <div class="heart">✨</div>
   <h1>You’re Special</h1>
@@ -108,33 +112,37 @@ a:hover{text-decoration:underline;}
   <p><span>Your presence lights up my day 🌟</span></p>
   <img src="https://i.ibb.co/5Tg2t0L/heart.png" alt="Heart">
   <a href="https://www.w3schools.com/html/" target="_blank">Learn HTML Together</a>
+
   <form>
     <label>Name: <input type="text" placeholder="Your name"></label><br>
     <label>Email: <input type="email" placeholder="Your email"></label><br>
     <label>Message: <textarea placeholder="Leave a sweet note"></textarea></label><br>
-    <button>Send 💌</button>
+    <button id="loveBtn2">Send 💌</button>
   </form>
+
   <div class="dec dec3"></div>
   <div class="dec dec4"></div>
 </div>
 
-<!-- Slide 3 -->
+<!-- SLIDE 3 -->
 <div class="slide slide3">
   <div class="heart">💫</div>
   <h1>I Appreciate You</h1>
   <h2>Thank You</h2>
   <p><span>Every little thing about you is amazing ✨</span></p>
   <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Love Music"></iframe>
+
   <table>
     <tr><th>Fun Activities</th><th>Emoji</th></tr>
     <tr><td>Walks</td><td>🚶‍♂️</td></tr>
     <tr><td>Movies</td><td>🎬</td></tr>
     <tr><td>Coffee</td><td>☕</td></tr>
   </table>
+
   <div class="dec dec5"></div>
 </div>
 
-<!-- Slide 4 -->
+<!-- SLIDE 4 -->
 <div class="slide slide4">
   <div class="heart">💌</div>
   <h1>Just So You Know</h1>
@@ -145,7 +153,7 @@ a:hover{text-decoration:underline;}
 
 </div>
 
-<!-- Nav dots -->
+<!-- NAV DOTS -->
 <div class="dots">
   <div class="dot active" onclick="goSlide(0)"></div>
   <div class="dot" onclick="goSlide(1)"></div>
@@ -153,17 +161,19 @@ a:hover{text-decoration:underline;}
   <div class="dot" onclick="goSlide(3)"></div>
 </div>
 
-<!-- JS -->
 <script>
-// Slider
+// ---------------- SLIDER NAV ----------------
 let current=0;
 const slider=document.getElementById("slider");
 const dots=document.querySelectorAll(".dot");
-function goSlide(i){current=i; slider.style.transform=`translateX(-${i*100}vw)`; updateDots();}
+function goSlide(i){
+  current=i;
+  slider.style.transform=`translateX(-${i*100}vw)`;
+  updateDots();
+}
 function updateDots(){dots.forEach(d=>d.classList.remove("active")); dots[current].classList.add("active");}
-setInterval(()=>{current=(current+1)%4; goSlide(current);},5000);
 
-// Floating hearts
+// ---------------- FLOATING HEARTS ----------------
 const colors=['#ff4b6c','#ff758f','#ffd1dc','#ff9a9e','#fbc2eb'];
 for(let i=0;i<80;i++){
   const f=document.createElement('div'); f.className='floating'; f.innerText='💖';
@@ -174,6 +184,22 @@ for(let i=0;i<80;i++){
   f.style.animationDelay=(Math.random()*10)+'s';
   document.body.appendChild(f);
 }
+
+// ---------------- BUTTON EXPLODING HEARTS ----------------
+const btn=document.getElementById('loveBtn2');
+btn.addEventListener('click', function(e){
+  e.preventDefault();
+  for(let i=0;i<20;i++){
+    const h=document.createElement('div');
+    h.className='explodingHeart';
+    h.style.left=(e.clientX+Math.random()*50-25)+'px';
+    h.style.top=(e.clientY+Math.random()*50-25)+'px';
+    h.style.color=colors[Math.floor(Math.random()*colors.length)];
+    h.innerText='💖';
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),1000);
+  }
+});
 </script>
 
 </body>
